# boilered

./: .gitignore  .gitmodules  CMakeLists.txt
src/: entitylistmodel.cpp  entitylistmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  materiallistmodel.cpp  materiallistmodel.h  renderview.h  samplepart.cpp  samplepart.h
